--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Geocoding service</title>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css" />
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css" /> -->
+        <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
         <style>
             html, body {
                 height: 100%;
@@ -31,10 +32,26 @@
                 border-radius: 4px;
                 box-shadow: 0 0 5px #aaa;
             }
-            h4{
-                /*overflow: auto;*/
-                color:#2e6da4;
+            h4, h1{
+                color:#127ba3;
                 /*line-height: 1.5;*/
+            }
+            h1{
+                text-align: center;
+                margin-bottom: 20px;
+            }
+            .data_no{
+                float:left;
+                width:24px;
+                height:24px;
+                border-radius:50%;
+                background: #d46491;
+                text-align: center;
+                color:#fff;
+                display: inline-block;
+                margin-right: 6px;
+                line-height: 24px;
+                vertical-align: middle;
             }
             .content{
                 overflow: auto;
@@ -54,8 +71,15 @@
                 padding-bottom:10px;
             }
             #relatedPosts{
-                height:380px;
+                height:393px;
                 overflow: auto;
+            }
+            .list-group-item{
+                transition:all .5s;
+                -webkit-transition:all .5s;
+            }
+            .list-group-item:hover{
+                background: #efefef;
             }
         </style>
     </head>
@@ -63,8 +87,8 @@
         <div id="loading"></div>
         <div class="container">
             <div class="row">
-                <h1>所有資料</h1>
-                <div class="col-md-8" class="map_wrap">
+                <h1>All</h1>
+                <div class="col-md-8 col-sm-8" class="map_wrap">
                     <div id="map"></div>
                     <div id="map_box">
                         <div class="content"><!-- title:  --><h4 id="postTitle"></h4>
@@ -74,33 +98,39 @@
                         <div class="clearfix"></div>
                     </div>
                 </div><!-- col-md-8 -->
-                <div class="col-md-4">
-                    <form class="form-inline">
+                <div class="col-md-4 col-sm-4">
+                    <div class="input-group" style="margin-bottom:15px;">
+                      <input type="text" class="form-control" placeholder="Search Place..">
+                      <span class="input-group-btn">
+                        <a id="submit" role="button" value="" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></a>
+                      </span>
+                    </div><!-- /input-group -->
+                    <!-- <form class="form-inline">
                         <div class="form-group">
                             <input id="address" type="textbox" class="form-control" value="">
                         </div>
-                        <a id="submit" role="button" value="" class="btn btn-primary">搜尋</a>
+                        
                         <hr />
 
-                    </form>
+                    </form> -->
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label for="longtitude" class="col-sm-2 control-label">經度</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="longtitude" placeholder="經度">
+                            <label for="longtitude" class="col-md-4 col-sm-4 control-label">Lng</label>
+                            <div class="col-md-8 col-sm-8">
+                                <input type="text" class="form-control" id="longtitude" placeholder="Longitude">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="latitude" class="col-sm-2 control-label">經度</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="latitude" placeholder="經度">
+                            <label for="latitude" class="col-md-4 col-sm-4 control-label">Lat</label>
+                            <div class="col-md-8 col-sm-8">
+                                <input type="text" class="form-control" id="latitude" placeholder="Latitude">
                             </div>
                         </div>
                         <div class="btn-group chg_btns btn-group-justified">
-                            <a href="#" class="btn btn-primary" id="btnSavePost">儲存</a>
-                            <a href="#" class="btn btn-default" id="btnPreviousPost">上一筆</a>
-                            <a href="#" class="btn btn-default" id="btnNextPost">下一筆</a>
-                            <a href="#" class="btn btn-default" id="btnNextPage">另外十筆</a>
+                            <a href="#" class="btn btn-primary" id="btnSavePost"><span class="glyphicon glyphicon-floppy-disk"></span></a>
+                            <a href="#" class="btn btn-default" id="btnPreviousPost"><span class="glyphicon glyphicon-chevron-left"></span></a>
+                            <a href="#" class="btn btn-default" id="btnNextPost"><span class="glyphicon glyphicon-chevron-right"></span></a>
+                            <a href="#" class="btn btn-default" id="btnNextPage">Another 10</a>
                         </div>
                         <!--  <br />經度：<input id="longtitude" type="textbox" value=""> -->
                         <!-- <br />緯度：<input id="latitude" type="textbox" value=""> -->
@@ -281,8 +311,8 @@
                         if (data.count > 1) {
                             $.each(data.results, function () {
                                 if (currentResult[workingIndex].id != this.id) {
-                                    listHtml += '<div class="list-group-item">' + labels[labelListIndex++ % labels.length] + 
-                                            '<h4 class="list-group-item-heading">' + this.title + '</h4>' +
+                                    listHtml += '<div class="list-group-item"><span class="data_no">' + labels[labelListIndex++ % labels.length] + 
+                                            '</span><h4 class="list-group-item-heading">' + this.title + '</h4>' +
                                             '<p class="list-group-item-text">' + this.content + '</p>';
                                     if (relatedId == this.id) {
                                         listHtml += '<a data-id="' + this.id + '" class="glyphicon glyphicon-link btn btn-primary pull-right"></a>';
