trigger next button clicking on saving

--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
                 });
                 $('#btnSavePost').click(function () {
                     saveCurrentPost();
+                    $('#btnNextPost').trigger('click');
                     return false;
                 });
             })
