push related markers into stack

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                                         infowindow.setContent(this.info);
                                         infowindow.open(map, this);
                                     });
+                                    markers.push(marker);
                                 }
                             });
                         }
