fix missing id in address field

--- a/index.html
+++ b/index.html
@@ -100,19 +100,11 @@
                 </div><!-- col-md-8 -->
                 <div class="col-md-4 col-sm-4">
                     <div class="input-group" style="margin-bottom:15px;">
-                        <input type="text" class="form-control" placeholder="Search Place..">
+                        <input type="text" class="form-control" id="address" placeholder="Search Place..">
                         <span class="input-group-btn">
                             <a id="submit" role="button" value="" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></a>
                         </span>
                     </div><!-- /input-group -->
-                    <!-- <form class="form-inline">
-                        <div class="form-group">
-                            <input id="address" type="textbox" class="form-control" value="">
-                        </div>
-                        
-                        <hr />
-
-                    </form> -->
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label for="longtitude" class="col-md-4 col-sm-4 control-label">Lng</label>
